apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=json --report-unused-disable-directives disable-directive.js@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=json --report-unused-disable-directives disable-directive.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
{ "diagnostics": [{"message": "Unused eslint-disable directive (no problems were reported).","severity": "warning","causes": [],"filename": "disable-directive.js","labels": [{"span": {"offset": 231,"length": 39,"line": 9,"column": 1}}],"related": []},
{"message": "Unused eslint-disable directive (no problems were reported).","severity": "warning","causes": [],"filename": "disable-directive.js","labels": [{"span": {"offset": 287,"length": 39,"line": 12,"column": 1}}],"related": []},
{"message": "Unused eslint-disable directive (no problems were reported).","severity": "warning","causes": [],"filename": "disable-directive.js","labels": [{"span": {"offset": 343,"length": 46,"line": 15,"column": 1}}],"related": []}],
              "number_of_files": 1,
              "number_of_rules": 2,
              "threads_count": 1,
              "start_time": <variable>
            }
            ----------
CLI result: LintSucceeded
----------
