apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=json ok.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=json ok.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
{ "diagnostics": [],
              "number_of_files": 1,
              "number_of_rules": 2,
              "threads_count": 1,
              "start_time": <variable>
            }
            ----------
CLI result: LintSucceeded
----------
