apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=json test.js@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=json test.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
{ "diagnostics": [{"message": "`debugger` statement is not allowed","code": "eslint(no-debugger)","severity": "error","causes": [],"url": "https://goatlint.dev/docs/guide/usage/linter/rules/eslint/no-debugger.html","help": "Remove the debugger statement","filename": "test.js","labels": [{"span": {"offset": 38,"length": 9,"line": 5,"column": 1}}],"related": []},
{"message": "Function 'foo' is declared but never used.","code": "eslint(no-unused-vars)","severity": "warning","causes": [],"url": "https://goatlint.dev/docs/guide/usage/linter/rules/eslint/no-unused-vars.html","help": "Consider removing this declaration.","filename": "test.js","labels": [{"label": "'foo' is declared here","span": {"offset": 9,"length": 3,"line": 1,"column": 10}}],"related": []},
{"message": "Parameter 'b' is declared but never used. Unused parameters should start with a '_'.","code": "eslint(no-unused-vars)","severity": "warning","causes": [],"url": "https://goatlint.dev/docs/guide/usage/linter/rules/eslint/no-unused-vars.html","help": "Consider removing this parameter.","filename": "test.js","labels": [{"label": "'b' is declared here","span": {"offset": 16,"length": 1,"line": 1,"column": 17}}],"related": []}],
              "number_of_files": 1,
              "number_of_rules": 2,
              "threads_count": 1,
              "start_time": <variable>
            }
            ----------
CLI result: LintFoundErrors
----------
