apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=junit parser-error.js@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=junit parser-error.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
<?xml version="1.0" encoding="UTF-8"?>
<testsuites name="Oxlint" tests="1" failures="0" errors="1">
    <testsuite name="parser-error.js" tests="1" disabled="0" errors="1" failures="0">
        <testcase name="">
            <error message="Expected `;` but found `:`">line 3, column 9, Expected `;` but found `:`</error>
        </testcase>
    </testsuite>
</testsuites>
----------
CLI result: LintFoundErrors
----------
