apps/goatlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=stylish ok.js@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --format=stylish ok.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
----------
CLI result: LintSucceeded
----------
